Add Meta Tags, Open Graph Protocol, Favicon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>X Clone</title>
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="X" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <title>Whats Happening | Twitter</title>
+    <meta name="description" content="From breaking news and entertainment to sports and politics, get the full story with all the live commentary." />
+    <meta name="author" content="Ayberk Yavas" />
+    <meta name="keywords" content="twitter, social media, news, entertainment, sports, politics" />
+    <meta property="og:title" content="Whats Happening | Twitter" />
+    <meta property="og:description" content="From breaking news and entertainment to sports and politics, get the full story with all the live commentary." />
+    <meta property="og:image" content="/ogp.webp" />
+    <meta property="og:url" content="https://ayberkyavas.com" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
